--- a/style.css
+++ b/style.css
@@ -1,30 +1,37 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
 }
-body{
-    
-  font-family: "Gabarito", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+
+body {
+
+    font-family: "Gabarito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
-.navbar{
+
+.navbar {
     padding: 10px;
     display: flex;
     justify-content: space-between;
-   
-     border-bottom:solid black 1px ;
-     gap: 10px;
-     align-items: center;
-    
+
+    border-bottom: solid black 1px;
+    gap: 10px;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+
 }
-.navbar__s1__title{
+
+.navbar__s1__title {
     color: #A435F0;
     align-items: center;
-   
+
 }
-.navbar__s2{
+
+.navbar__s2 {
     padding: 10px;
     border: solid black 1px;
     border-radius: 30px;
@@ -32,22 +39,50 @@ body{
     display: flex;
     gap: 10px;
     align-items: center;
+    background-color: white;
+
 
 }
-.navbar__s2 input{
+
+.navbar__s2 input {
     border: none;
     width: 100%;
- 
+    background-color: transparent;
+
 }
-.navbar__s2 input:focus{
+
+.navbar__s2 input:focus {
     outline: none;
 }
-.navbar__s3{
+
+.navbar__s3 {
     display: flex;
     gap: 10px;
     align-items: center;
 }
-.categories{
+
+/* my learning */
+.mylearning {
+    position: relative;
+    cursor: pointer;
+}
+
+.mylearning__popup {
+    position: absolute;
+    border: solid black 2px;
+    background: white;
+    width: 100px;
+    padding: 10px;
+    right: 0;
+    top: 180%;
+    display: none;
+}
+
+.mylearning:hover .mylearning__popup {
+    display: block;
+}
+
+.categories {
     display: flex;
     justify-content: space-around;
     padding: 10px;
@@ -56,19 +91,39 @@ body{
     flex-grow: 2;
     flex-basis: 50%;
 }
-.categories p{
+
+.categories p {
     background-color: #A435F0;
     color: white;
     padding: 10px;
     border-radius: 30px;
 }
-.sale-img img{
+
+.sale-img img {
     width: 100%;
+    position: relative;
 }
-.recommended{
+
+.sale-img__offer {
+    width: 350px;
+    height: 100px;
+    background-color: white;
+    color: black;
+    position: absolute;
+    bottom: 300px;
+    left: 200px;
+    padding: 10px;
+    border: solid black 2px;
+}
+
+
+
+
+.recommended {
     padding: 10px;
 }
-.recommended__container{
+
+.recommended__container {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
@@ -76,65 +131,79 @@ body{
 
 
 }
-.course-card{
-  width: 350px;
-   
+
+.course-card {
+    width: 350px;
+
 }
-.course-card img{
+
+.course-card img {
     width: 100%;
-    height:50%
+    height: 50%
 }
-.topics{
+
+.topics {
     padding: 10px;
 }
-.topics__container{
+
+.topics__container {
     display: flex;
     gap: 10px;
     margin-top: 10px;
     flex-wrap: wrap;
-    
+
 }
-.topics__container p{
+
+.topics__container p {
     border: solid grey 2px;
     padding: 10px;
     flex-grow: 1;
     flex-basis: 25%;
-    
+
 }
-.popular{
+
+.popular {
     padding: 10px;
 }
-.popular__container{
+
+.popular__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 10px;
 }
-.footer_one{
+
+.footer_one {
     display: flex;
     gap: 10px;
-    
+
 }
-.footer_two{
+
+.footer_two {
     display: flex;
     justify-content: space-between;
     margin: 20px;
     align-items: center;
 }
-.footer{
+
+.footer {
     padding: 30px;
     background-color: black;
     color: white;
 }
-.footer_one p{
+
+.footer_one p {
     margin: 20px;
 }
-.topics__container p:hover{
+
+.topics__container p:hover {
     background-color: #A435F0;
 }
-.course-card:hover{
+
+.course-card:hover {
     background-color: lightgray;
 }
-.categories p:hover{
-    background-color:purple;
+
+.categories p:hover {
+    background-color: purple;
 }
