--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ body {
     gap: 10px;
     align-items: center;
 }
+.navbar__s4{
+    display: none;
+}
 
 /* my learning */
 .mylearning {
@@ -106,13 +109,13 @@ body {
 }
 
 .sale-img__offer {
-    width: 350px;
-    height: 100px;
+    width: 35%;
+    
     background-color: white;
     color: black;
     position: absolute;
-    bottom: 300px;
-    left: 200px;
+    top: 40%;
+    left: 10%;
     padding: 10px;
     border: solid black 2px;
     animation-name: zoom;
@@ -148,7 +151,9 @@ body {
 }
 
 .course-card {
-    width: 350px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 
 }
 
@@ -224,4 +229,26 @@ body {
     color: black;
     transition: 1s;
     cursor: pointer;
+}
+/*media queries*/
+@media  screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+    }
+
+}
+@media  screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+    .navbar__s4{
+        display: block;
+        
+    }
+    .sale-img__offer{
+        top: 18%;
+    }
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
 }
